# qrcode_detect

./: .gitignore  AGENTS.md  CMakeLists.txt  DEPS  LICENSE  Makefile  README.md  codeformat.sh  install_tools.sh  sync_deps.sh
cmake/: Utility.cmake  download_file.cmake  ios.toolchain.cmake
deb_template/DEBIAN/: control  postinst  postrm
docker/: .dockerignore  .gitignore  Dockerfile  build_docker.sh  docker-compose.yml
include/qrcode_detect/core/: AutoBuffer.hpp  detect_result.hpp  detector.hpp  detector_factory.hpp  detector_type.hpp  image_loader.hpp  sliding_window_detector.hpp
script/: build_deb.sh  build_libargparse.sh  build_libhv.sh  build_libopencv.sh  build_libspdlog.sh  build_libzbar.sh  check_env.sh  download_libargparse.sh  download_libhv.sh  download_libopencv.sh  download_libspdlog.sh  download_libzbar.sh
skills/commit/: SKILL.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp  version.hpp.in
src/libs/: CMakeLists.txt
src/libs/core/: AutoBuffer.cpp  AutoBuffer.hpp  CMakeLists.txt  align.cpp  align.hpp  base64.cpp  base64.hpp  detect_result.cpp  detect_result.hpp  detector.cpp  detector.hpp  detector_factory.cpp  detector_factory.hpp  detector_type.hpp  image_loader.cpp  null_detector.cpp  null_detector.hpp  opencv_detector.cpp  opencv_detector.hpp  sliding_window_detector.cpp  version.hpp.in  wechat_detector.cpp  wechat_detector.hpp  yolov3_detector.cpp  yolov3_detector.hpp  zbar_detector.cpp  zbar_detector.hpp
src/server/: CMakeLists.txt  MD5.cpp  MD5.h  daemon.cpp  daemon.hpp  detector_factory.cpp  detector_factory.hpp  image_downloader.cpp  image_downloader.hpp  main.cpp  qrcode_detect_server.service.in  reqparmas.cpp  reqparmas.hpp  router.cpp  router.hpp  server_context.cpp  server_context.hpp  version.hpp.in
src/server/handler/: common_handler.cpp  common_handler.hpp  detect_handler.cpp  detect_handler.hpp  nlohmann_json_reponse_provide.cpp  nlohmann_json_reponse_provide.hpp  ordered_worker_pool.hpp
src/server/tests/: ordered_worker_pool_test.cpp
